--- a/configs/articulator/articulator-cow-rd.yaml
+++ b/configs/articulator/articulator-cow-rd.yaml
@@ -2,10 +2,10 @@ _target_: dos.trainer.Trainer # Class Name
 
 train_dataset:
   _target_: dos.datasets.ImageDataset       # Class Name
-  root_dir: /work/oishideb/cow_sd_generated_5  # /0_poses_target_img_NO_KPs.png
+  # root_dir: /work/oishideb/cow_sd_generated_5  # /0_poses_target_img_NO_KPs.png
   # root_dir: /scratch/shared/beegfs/oishideb/cow  # sample 1
   # root_dir: /work/oishideb/cow_sample_2  # sample 2
-  # root_dir: /work/oishideb/cow_dataset/cow_dataset # 9 images
+  root_dir: /work/oishideb/cow_dataset/cow_dataset # 9 images
   attributes:
     - name: image
       suffix: _rgb.png
@@ -25,22 +25,24 @@ model:
     body_bones_type: z_minmax_y+
     temperature: 0.05
 
-  path_to_save_images: /scratch/shared/nfs2/oishideb/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2073_Degree_45
+  path_to_save_images: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2120_Cow_1_views_45_deg
   num_pose_for_optim: 1
   num_pose_for_visual: 20
-  num_sample_bone_line: 2  # 
+  num_sample_bone_line: 5  # 
   num_sample_farthest_points: 150  # No. of Keypoints to select randomly 
-  mode_kps_selection: "kps_fr_sample_farthest_points" # Options are "kps_fr_sample_on_bone_line" OR "kps_fr_sample_farthest_points"
+  mode_kps_selection: "kps_fr_sample_on_bone_line" # Options are "kps_fr_sample_on_bone_line" OR "kps_fr_sample_farthest_points"
   shape_template_path: /scratch/shared/beegfs/tomj/projects/articulator/data/synth_animals/shape_templates/cow_female-rd/Cow-OBJ-v01/Cow_Highpoly.obj
   enable_texture_predictor: False
 
   view_option: "multi_view_azimu" # Options are "multi_view_azimu"; "multi_view_rand"; "single_view"
   random_camera_radius: 2.5 # for single_view: 1; for multi-view: 2.5
   fit_shape_template_inside_unit_cube: True # for single_view: False; for multi-view: True
-  phi_range_for_optim: [45, 45] # [0, 360]; For one sideview [90,90]
-  phi_range_for_visual: [0, 360]
+  phi_range_for_optim:  [0, 360] # [45, 45] # ; For one sideview [90,90]
+  phi_range_for_visual: [0, 360] # 
   
   # Options are
+  # get_2_alternating_phi_45_degree_apart
+  # get_4_alternating_phi_45_degree_apart
   # "rand_phi_each_step_along_azi_for_one_fixed_iter"
   # "rand_phi_each_step_along_azi_long_short_update_intervals"
   # "alternate_2_side_views_each_step_along_azimuth"
@@ -48,7 +50,7 @@ model:
   # "multiple_random_phi_in_batch"      # if selected this, then specify the no. here - "num_pose_for_optim"
   # "2_side_views_only_in_batch"        # if selected this, then specify the no. here - "num_pose_for_optim"
   # "guidance_and_rand_views_in_batch"  # if selected this, then specify the no. here - "num_pose_for_optim" as 2
-  multi_view_optimise_option: "rand_phi_each_step_along_azi_for_one_fixed_iter"
+  multi_view_optimise_option: "get_2_alternating_phi_45_degree_apart"
 
   bones_rotations: "bones_rotations" # Options are "bones_rotations"; "DUMMY_bones_rotations"; "NO_bones_rotations"
   using_pil_object: False
@@ -78,8 +80,8 @@ model:
 
   diffusion_Text_to_Target_Img:  # variable Name
     _target_: dos.components.diffusion_model_text_to_image.diffusion_sds.DiffusionForTargetImg # Class Name
-    cache_dir: /scratch/shared/nfs2/oishideb/nfs2/.cache/huggingface_hub    # /work/oishideb/cache/huggingface_hub
-    output_dir: /scratch/shared/nfs2/oishideb/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2073_Degree_45/sd_sds_output/
+    cache_dir: /work/oishideb/from_nfs2/nfs2/.cache/huggingface_hub    # /work/oishideb/cache/huggingface_hub
+    output_dir: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2120_Cow_1_views_45_deg/sd_sds_output/
     init_image_path: /users/oishideb/laam/dos/examples/data/cow.png
     vis_name: cow-sds_latent-l2_image-600-lr1e-1.jpg
     prompts_source: '' #.The photo should have a grey background.' 
@@ -103,7 +105,7 @@ renderer:   # variable Name
   cam_pos_z_offset: 0.0
   fov: 28.84
 
-path_to_save_img_per_iteration: /scratch/shared/nfs2/oishideb/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2073_Degree_45
+path_to_save_img_per_iteration: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2120_Cow_1_views_45_deg
 checkpoint_root_dir: /work/oishideb/articulation_cow_chkpts
 experiment_name: articulator-dev-0.1
 save_each_iteration: True
@@ -117,7 +119,7 @@ device: cuda:0
 # learning_rate: 1e-9  # tried with 0.01, 0.5, 0.9, 1;   # 1e-4   # DOS_1432
 learning_rate: 0.002          
 # for debugging
-num_iterations: 70
+num_iterations: 80
 num_vis_iterations: 1
 num_eval_iterations: 10
 save_checkpoint_freq: 50
