--- a/configs/articulator/articulator-cow-rd.yaml
+++ b/configs/articulator/articulator-cow-rd.yaml
@@ -2,10 +2,13 @@ _target_: dos.trainer.Trainer # Class Name
 
 train_dataset:
   _target_: dos.datasets.ImageDataset       # Class Name
-  # root_dir: /work/oishideb/cow_sd_generated_5  # /0_poses_target_img_NO_KPs.png
+  root_dir: /work/oishideb/cow_sd_generated_3  # /0_poses_target_img_NO_KPs.png
+  # root_dir: /work/oishideb/cow_sd_generated_2   # Fixed cow walking image 315 degree
+  # root_dir: /work/oishideb/cow_sd_generated_3   # Fixed head bend cow image
+  # root_dir: /work/oishideb/cow_sd_generated_4   # Fixed cow walking image 45 degree
   # root_dir: /scratch/shared/beegfs/oishideb/cow  # sample 1
   # root_dir: /work/oishideb/cow_sample_2  # sample 2
-  root_dir: /work/oishideb/cow_dataset/cow_dataset # 9 images
+  # root_dir: /work/oishideb/cow_dataset/cow_dataset # 9 images
   attributes:
     - name: image
       suffix: _rgb.png
@@ -25,19 +28,23 @@ model:
     body_bones_type: z_minmax_y+
     temperature: 0.05
 
-  path_to_save_images: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2120_Cow_1_views_45_deg
+  gltf_skin:
+    _target_: dos.components.skinning.gltf_skinning.Skin
+    gltf_file_path: /scratch/shared/beegfs/tomj/projects/articulator/data/synth_animals/shape_templates/cow_female-rd/Cow-OBJ-v01/Cow_Highpoly.gltf
+
+  path_to_save_images: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2187_Cow_new_gltf_head_bend_fixed_90degree
   num_pose_for_optim: 1
   num_pose_for_visual: 20
   num_sample_bone_line: 5  # 
-  num_sample_farthest_points: 150  # No. of Keypoints to select randomly 
-  mode_kps_selection: "kps_fr_sample_on_bone_line" # Options are "kps_fr_sample_on_bone_line" OR "kps_fr_sample_farthest_points"
+  num_sample_farthest_points: 250  # No. of Keypoints to select randomly 
+  mode_kps_selection: "kps_fr_sample_farthest_points" # Options are "kps_fr_sample_on_bone_line" OR "kps_fr_sample_farthest_points"
   shape_template_path: /scratch/shared/beegfs/tomj/projects/articulator/data/synth_animals/shape_templates/cow_female-rd/Cow-OBJ-v01/Cow_Highpoly.obj
   enable_texture_predictor: False
 
   view_option: "multi_view_azimu" # Options are "multi_view_azimu"; "multi_view_rand"; "single_view"
   random_camera_radius: 2.5 # for single_view: 1; for multi-view: 2.5
   fit_shape_template_inside_unit_cube: True # for single_view: False; for multi-view: True
-  phi_range_for_optim:  [0, 360] # [45, 45] # ; For one sideview [90,90]
+  phi_range_for_optim:  [90, 90] # [0, 360] # ; For one sideview [90,90]
   phi_range_for_visual: [0, 360] # 
   
   # Options are
@@ -50,28 +57,28 @@ model:
   # "multiple_random_phi_in_batch"      # if selected this, then specify the no. here - "num_pose_for_optim"
   # "2_side_views_only_in_batch"        # if selected this, then specify the no. here - "num_pose_for_optim"
   # "guidance_and_rand_views_in_batch"  # if selected this, then specify the no. here - "num_pose_for_optim" as 2
-  multi_view_optimise_option: "get_2_alternating_phi_45_degree_apart"
+  multi_view_optimise_option: "multiple_random_phi_in_batch"
 
   bones_rotations: "bones_rotations" # Options are "bones_rotations"; "DUMMY_bones_rotations"; "NO_bones_rotations"
   using_pil_object: False
-  cyc_consi_check_switch: True    # IMPORTANT: THIS SAME VARIABLE IS USED AT TWO PLACES, SWITCH ON/OFF AT BOTH PLACES
-  cyc_consi_check_dist_threshold: 30 # 15
+  cyc_consi_check_switch: False    # IMPORTANT: THIS SAME VARIABLE IS USED AT TWO PLACES, SWITCH ON/OFF AT BOTH PLACES
+  cyc_consi_check_dist_threshold: 9 # 15
   cyc_check_img_save: True # This saves all the images with Cycle Consistency Check
   # seed: 60
-  target_image_fixed: False
-  save_individual_img: False    # IMPORTANT: THIS SAME VARIABLE IS USED AT TWO PLACES, SWITCH ON/OFF AT BOTH PLACES
+  target_image_fixed: True
+  save_individual_img: True    # IMPORTANT: THIS SAME VARIABLE IS USED AT TWO PLACES, SWITCH ON/OFF AT BOTH PLACES
   
   correspond:
     _target_: dos.components.fuse.compute_correspond.ComputeCorrespond
     only_dino: True # If TRUE, this will switch off the loading of ODISE model that extracts sd features for the FUSE Model.
     batch_compute: False    # Switch to turn on and off the Batch Computation for the correspondences
-    cyc_consi_check_switch: True  # IMPORTANT: THIS SAME VARIABLE IS USED AT TWO PLACES, SWITCH ON/OFF AT BOTH PLACES
+    cyc_consi_check_switch: False  # IMPORTANT: THIS SAME VARIABLE IS USED AT TWO PLACES, SWITCH ON/OFF AT BOTH PLACES
 
   articulation_predictor:
     _target_: dos.predictors.articulation_predictor.ArticulationPredictor  # Class Name
     size_dataset: 49
-    num_bones: 20
-    degree: 65
+    num_bones: 47 # GLTF has 47 bones
+    degree: 60
     
   renderer:   # variable Name
     _target_: dos.modules.renderer.Renderer # Class Name
@@ -81,19 +88,19 @@ model:
   diffusion_Text_to_Target_Img:  # variable Name
     _target_: dos.components.diffusion_model_text_to_image.diffusion_sds.DiffusionForTargetImg # Class Name
     cache_dir: /work/oishideb/from_nfs2/nfs2/.cache/huggingface_hub    # /work/oishideb/cache/huggingface_hub
-    output_dir: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2120_Cow_1_views_45_deg/sd_sds_output/
+    output_dir: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2187_Cow_new_gltf_head_bend_fixed_90degree/sd_sds_output/
     init_image_path: /users/oishideb/laam/dos/examples/data/cow.png
     vis_name: cow-sds_latent-l2_image-600-lr1e-1.jpg
     prompts_source: '' #.The photo should have a grey background.' 
     # negative_prompts: 'front view, side view, tail, black' #  , cartoon, dead, shadow, reflection'     # the string shouldn't be in a square brackets ['']
-    prompts: 'A photograph of a cow running very very fast' # if view_dependent_prompting is True, then 'view' will be automatically specified. 
+    prompts: 'A photograph of a cow walking fast' # if view_dependent_prompting is True, then 'view' will be automatically specified. 
     view_dependent_prompting: True
     mode: sds_latent # Options are sds_image OR sds_latent-l2_image OR sds_latent
     lr: 0.1  # For DeepFloyd+SDS
     lr_l2: 0.1  # For SD+SDS  1e4
     # seed: 8 # 6
     num_inference_steps: 50
-    guidance_scale: 40
+    guidance_scale: 50
     dds: False
     select_diffusion_option: 'sd' # Options are sd, sd_XL, df, sd_dds_loss, mv_dream  # by default is sds loss
     image_fr_path: False
@@ -105,21 +112,21 @@ renderer:   # variable Name
   cam_pos_z_offset: 0.0
   fov: 28.84
 
-path_to_save_img_per_iteration: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2120_Cow_1_views_45_deg
+path_to_save_img_per_iteration: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2187_Cow_new_gltf_head_bend_fixed_90degree
 checkpoint_root_dir: /work/oishideb/articulation_cow_chkpts
 experiment_name: articulator-dev-0.1
 save_each_iteration: True
 evaluate_the_model: False
-save_individual_img: False    # IMPORTANT: THIS SAME VARIABLE IS USED AT TWO PLACES, SWITCH ON/OFF AT BOTH PLACES
+save_individual_img: True    # IMPORTANT: THIS SAME VARIABLE IS USED AT TWO PLACES, SWITCH ON/OFF AT BOTH PLACES
 
 device: cuda:0
 
 # resume: True
 
 # learning_rate: 1e-9  # tried with 0.01, 0.5, 0.9, 1;   # 1e-4   # DOS_1432
-learning_rate: 0.002          
+learning_rate: 0.001 # 0.0005          
 # for debugging
-num_iterations: 80
+num_iterations: 150
 num_vis_iterations: 1
 num_eval_iterations: 10
 save_checkpoint_freq: 50
