--- a/configs/articulator/articulator-goat-rd.yaml
+++ b/configs/articulator/articulator-goat-rd.yaml
@@ -26,12 +26,12 @@ model:
     body_bones_type: z_minmax_y+
     temperature: 0.05
 
-  path_to_save_images: /scratch/shared/nfs2/oishideb/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-1873_goat_walk_alter_2_side_view_sch_600_lr_0.0009
+  path_to_save_images: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2131_Goat_walk
   num_pose_for_optim: 1
   num_pose_for_visual: 30
   num_sample_bone_line: 4  # 
   num_sample_farthest_points: 350
-  mode_kps_selection: "kps_fr_sample_farthest_points" # Options are "kps_fr_sample_on_bone_line" OR "kps_fr_sample_farthest_points"
+  mode_kps_selection: "kps_fr_sample_on_bone_line" # Options are "kps_fr_sample_on_bone_line" OR "kps_fr_sample_farthest_points"
   shape_template_path: /scratch/shared/beegfs/tomj/projects/articulator/data/synth_animals/shape_templates/cgtrader/uploads-files-2189654-Goat_family_v01/Goat_female.obj
   enable_texture_predictor: False
 
@@ -40,10 +40,20 @@ model:
   fit_shape_template_inside_unit_cube: True # for single_view: False; for multi-view: True
   phi_range_for_optim: [0, 360]
   phi_range_for_visual: [0, 360]
-  multi_view_optimise_option: "alternate_2_side_views_each_step_along_azimuth"
+
+  # Options are:
+  # get_2_alternating_phi_45_degree_apart
+  # get_4_alternating_phi_45_degree_apart
+  # "rand_phi_each_step_along_azi_for_one_fixed_iter"
+  # "rand_phi_each_step_along_azi_long_short_update_intervals"
+  # "alternate_2_side_views_each_step_along_azimuth"
+  # "alternate_4_side_views_each_step_along_azimuth"
+  # "multiple_random_phi_in_batch"      # if selected this, then specify the no. here - "num_pose_for_optim"
+  # "2_side_views_only_in_batch"        # if selected this, then specify the no. here - "num_pose_for_optim"
+  # "guidance_and_rand_views_in_batch"  # if selected this, then specify the no. here - "num_pose_for_optim" as 2
+  multi_view_optimise_option: "get_2_alternating_phi_45_degree_apart"
 
   bones_rotations: "bones_rotations" # Options are "bones_rotations"; "DUMMY_bones_rotations"; "NO_bones_rotations"
-  debug_mode: False # IN DEBUG MODE, THIS WILL SWITCH OFF THE LOADING TO FUSE'S STABLE DIFFUSION MODEL
   using_pil_object: False
   cyc_consi_check_switch: True    # IMPORTANT: THIS SAME VARIABLE IS USED AT TWO PLACES, SWITCH ON/OFF AT BOTH PLACES
   cyc_consi_check_dist_threshold: 10 # 15
@@ -70,8 +80,8 @@ model:
 
   diffusion_Text_to_Target_Img:  # variable Name
     _target_: dos.components.diffusion_model_text_to_image.diffusion_sds.DiffusionForTargetImg # Class Name
-    cache_dir: /scratch/shared/nfs2/oishideb/nfs2/.cache/huggingface_hub    # /work/oishideb/cache/huggingface_hub
-    output_dir: /scratch/shared/nfs2/oishideb/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-1873_goat_walk_alter_2_side_view_sch_600_lr_0.0009/sd_sds_output/
+    cache_dir: /work/oishideb/from_nfs2/nfs2/.cache/huggingface_hub    # /work/oishideb/cache/huggingface_hub
+    output_dir: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2131_Goat_walk/sd_sds_output/
     init_image_path: /users/oishideb/laam/dos/examples/data/cow.png
     vis_name: cow-sds_latent-l2_image-600-lr1e-1.jpg
     # prompts: 'A photograph of a single cow running very fast, back view.' #.The photo should have a grey background.' # DOS-1338  opti multi_view_azimu, GS20, Num_Infe50
@@ -97,7 +107,7 @@ renderer:   # variable Name
   cam_pos_z_offset: 0.0
   fov: 28.84
 
-path_to_save_img_per_iteration: /scratch/shared/nfs2/oishideb/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-1873_goat_walk_alter_2_side_view_sch_600_lr_0.0009
+path_to_save_img_per_iteration: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2131_Goat_walk
 checkpoint_root_dir: /work/oishideb/articulation_cow_chkpts
 experiment_name: articulator-dev-0.1
 save_each_iteration: True
@@ -109,9 +119,9 @@ device: cuda:0
 # resume: True
 
 # learning_rate: 1e-9  # tried with 0.01, 0.5, 0.9, 1;   # 1e-4   # DOS_1432
-learning_rate: 0.0009           # DOS_1433
+learning_rate: 0.002          # DOS_1433
 # for debugging
-num_iterations: 550
+num_iterations: 80
 num_vis_iterations: 1
 num_eval_iterations: 10
 save_checkpoint_freq: 50
