updated config for Nelder Mead Optim

--- a/configs/articulator/articulator-cow-rd.yaml
+++ b/configs/articulator/articulator-cow-rd.yaml
@@ -20,7 +20,7 @@ train_dataset:
       suffix: _camera.txt
 
 model:
-  _target_: dos.models.articulator.Articulator 
+  _target_: dos.models.articulator_nelder_mead.Articulator  # Other option is articulator_grad_based
   bones_predictor:
     _target_: dos.components.skinning.bones_estimation.BonesEstimator
     num_body_bones: 8
