--- a/configs/articulator/articulator-horse-rd.yaml
+++ b/configs/articulator/articulator-horse-rd.yaml
@@ -24,15 +24,26 @@ model:
 
   gltf_skin:
     _target_: dos.components.skinning.gltf_skinning.Skin
-    gltf_file_path: /work/oishideb/HorseMaleRD.gltf
+    gltf_file_path: /users/oishideb/oishideb/Horse_stallion_IP.gltf
 
-  path_to_save_images: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2345_Horse
+  path_to_save_images: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2411_Horse
+  target_image_path: /work/oishideb/horse_sd_generated_3_new_mvDream/000009_rgb.png
+  superAnimal_kp_ON: True
+  super_Ani_head_kps_ON: False
+  super_Ani_body_kps_ON: False
+  all_4_legs_kps_ON: True
   num_pose_for_optim: 1
   num_pose_for_visual: 30
   num_sample_bone_line: 5  #
   num_sample_farthest_points: 150
   mode_kps_selection: "kps_fr_sample_farthest_points" # Options are "kps_fr_sample_on_bone_line" OR "kps_fr_sample_farthest_points"
-  shape_template_path: /work/oishideb/from_nfs2/animal_assets/uploads-files-2390590-Horse_Family_v01/Horse_HighPoly.obj
+  # shape_template_path: /work/oishideb/from_nfs2/animal_assets/uploads-files-2390590-Horse_Family_v01/Horse_HighPoly.obj
+  # shape_template_path: /users/oishideb/from_nfs2/uploads-files-2390590-Horse_Family_v01/Horse_stallion_HighPoly.obj    # has 6289 vertices
+  # shape_template_path: /users/oishideb/from_nfs2/uploads-files-2390590-Horse_Family_v01/Horse_LowPoly.obj
+  # shape_template_path: /users/oishideb/from_nfs2/uploads-files-2390590-Horse_Family_v01/Horse_stallion_LowPoly.obj
+  # shape_template_path: /users/oishideb/from_nfs2/uploads-files-2390590-Horse_Family_v01/Horse_foal_highPoly.obj        # has 5907 vertices
+  shape_template_path: /users/oishideb/from_nfs2/uploads-files-2390590-Horse_Family_v01/Horse_foal_LowPoly.obj
+  # shape_template_path: /users/oishideb/oishideb/horse-v4.obj
   enable_texture_predictor: False
   
   view_option: "multi_view_azimu" # Options are "multi_view_azimu"; "multi_view_rand"; "single_view"
@@ -71,7 +82,7 @@ model:
   articulation_predictor:
     _target_: dos.predictors.articulation_predictor.ArticulationPredictor  # Class Name
     size_dataset: 49
-    num_bones: 20
+    num_bones: 46
     degree: 70
     
   renderer:   # variable Name
@@ -82,7 +93,7 @@ model:
   diffusion_Text_to_Target_Img:  # variable Name
     _target_: dos.components.diffusion_model_text_to_image.diffusion_sds.DiffusionForTargetImg # Class Name
     cache_dir: /work/oishideb/cache/huggingface_hub
-    output_dir: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2345_Horse/sd_sds_output/
+    output_dir: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2411_Horse/sd_sds_output/
     init_image_path: /users/oishideb/laam/dos/examples/data/cow.png
     vis_name: cow-sds_latent-l2_image-600-lr1e-1.jpg
     # prompts: 'A photograph of a single cow running very fast, back view.' #.The photo should have a grey background.' # DOS-1338  opti multi_view_azimu, GS20, Num_Infe50
@@ -109,7 +120,7 @@ renderer:   # variable Name
   cam_pos_z_offset: 0.0
   fov: 28.84
 
-path_to_save_img_per_iteration: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2345_Horse
+path_to_save_img_per_iteration: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2411_Horse
 checkpoint_root_dir: /work/oishideb/articulation_cow_chkpts
 experiment_name: articulator-dev-0.1
 save_each_iteration: True
